kubernetes-templating/chartmuseum/ingress_cm.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chart-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/acme-challenge-type: http01
    cert-manager.io/cluster-issuer: "nip-issuer"
spec:
  tls:
  - hosts:
    - chart.150.230.151.237.nip.io
    secretName: chart-nip-tls
  rules:
  - host: chart.150.230.151.237.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chartmuseum
            port:
              number: 8080
